--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
 
   <link rel="stylesheet" type="text/css" href="style.css">
   
   <title>Frontend Mentor | Clipboard landing page</title>
 </head>
 <body>
-  <img id="logo" src="images/logo.svg">
+  <img id="logo" src="logo.svg">
 
   <p id="h1"><b>A history of everything you copy</b></p>
   <p id="paragraph" class="paragraph1">Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your devices.</p>
@@ -26,7 +26,7 @@
   <p id="paragraph" class="paragraph2">Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your 
   devices. Our Mac and iOS apps will help you organize everything.</p>
 
-  <img id="comp" src="images/image-computer.png">
+  <img id="comp" src="image-computer.png">
 
   <div class="features">
     <p id="h3"><b>Quick Search</b></p>
@@ -42,33 +42,33 @@
 
   <p id="paragraph" class="paragraph3">Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.</p>
   </div>
-  <img class="devices" src="images/image-devices.png">
+  <img class="devices" src="image-devices.png">
 
   <p id="h2"><b>Supercharge your workflow</b></p>
 
   <p id="p-tools">We’ve got the tools to boost your productivity.</p>
 
     <div class="create">
-      <img id="icon" src="images/icon-blacklist.svg">
+      <img id="icon" src="icon-blacklist.svg">
       <p id="h3"><b>Create blacklists</b></p>
       <p id="p-create">Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p></div>
 
     <div class="plain">
-      <img id="icon"src="images/icon-text.svg">
+      <img id="icon"src="icon-text.svg">
       <p id="h3"><b>Plain text snippets</b></p>
       <p id="p-plain">Remove unwanted formatting from copied text for a consistent look.</p></div>
 
     <div class="sneak">
-      <img id="icon"src="images/icon-preview.svg">
+      <img id="icon"src="icon-preview.svg">
       <p id="h3"><b>Sneak preview</b></p>
       <p id="p-preview">Quick preview of all snippets on your Clipboard for easy access.</p></div>
 
   <div class="logos">
-    <img  src="images/logo-google.png">
-    <img  src="images/logo-ibm.png">
-    <img  src="images/logo-microsoft.png">
-    <img  src="images/logo-hp.png">
-    <img  src="images/logo-vector-graphics.png">
+    <img  src="logo-google.png">
+    <img  src="logo-ibm.png">
+    <img  src="logo-microsoft.png">
+    <img  src="logo-hp.png">
+    <img  src="logo-vector-graphics.png">
   </div>
 
   <p id="h2"><b>Clipboard for iOS and Mac OS</b></p>
@@ -82,14 +82,14 @@
   </div>
 
   <div class="foot">
-    <div class="image"><img id="footlogo" src="images/logo.svg"></div>
+    <div class="image"><img id="footlogo" src="logo.svg"></div>
         <div class="f1">FAQs <br><br> Contact Us</div>
         <div class="f2">Privacy Policy <br><br> Press Kit</div>
         <div class="f3">Install Guide</div>
       <div class="f4">
-        <img style="padding-right: 20px;" src="images/icon-facebook.svg">
-        <img style="padding-right: 20px;" src="images/icon-twitter.svg">
-        <img style="padding-right: 20px;" src="images/icon-instagram.svg">
+        <img style="padding-right: 20px;" src="icon-facebook.svg">
+        <img style="padding-right: 20px;" src="icon-twitter.svg">
+        <img style="padding-right: 20px;" src="icon-instagram.svg">
       </div>
   </div>
   <footer>
