--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="j.zphavr/instagram.com">Josepha Amanda Vina Rosari</a>.
+      Coded by <a href="https://www.instagram.com/j.zphavr/">Josepha Amanda Vina Rosari</a>.
     </p>
   </footer>
 </body>
